SFDCProject/src/objects/Milestone_Proof_Partner_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Emails_To_Notify_Milestone_Proof_Upload__c</fullName>
        <inlineHelpText>Enter the email address to be notified. Use comma to separate more than one email address.</inlineHelpText>
        <label>Emails To Notify Milestone Proof Upload</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Milestone_Proof_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Milestone Proof Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Milestone Proof Partner Preferences</relationshipLabel>
        <relationshipName>Milestone_Proof_Partner_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Milestone Proof Partner Preference</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Milestone Proof Partner Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Proof Partner Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>